--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "material-table": "^1.53.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-material-design": "^0.3.7",
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
