--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.3",
-    "react-navigation-tabs": "^2.5.5"
+    "react-navigation-tabs": "^2.5.5",
+    "victory-native": "^33.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
