--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
     "moment": "^2.24.0",
     "moments": "0.0.2",
     "prop-types": "^15.7.2",
