--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.1",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^3.2.1",
     "react-native-pie": "^0.6.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
