--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "moment": "^2.24.0",
     "moments": "0.0.2",
     "prop-types": "^15.7.2",
-    "react": "16.9.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.12.0",
     "react-native": "0.61.1",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
@@ -25,6 +27,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.3",
     "react-navigation-tabs": "^2.5.5",
+    "victory": "^33.1.3",
     "victory-native": "^33.0.0"
   },
   "devDependencies": {
