--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.61.1",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-svg": "^9.13.3",
